--- a/frontend/src/app/segment-category/segments/create-new-segment/create-new-segment.component.html
+++ b/frontend/src/app/segment-category/segments/create-new-segment/create-new-segment.component.html
@@ -2,7 +2,7 @@
   <h1 class="mt-2">Create New Segment</h1>
   <div class="row d-flex flex-wrap flex-row">
     <div class="col-lg-8 mt-2">
-      <app-users-by-behaviour></app-users-by-behaviour>
+      <app-users-by-behaviour [(segment)]="newSegment"></app-users-by-behaviour>
     </div>
   </div>
 </div>
