--- a/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
+++ b/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
@@ -29,17 +29,17 @@
 </div>
 
 <div class="form-group m-2" *ngIf="!hideElementDaySelector">
-  <input type="number" class="form-control" value="1" min="1">
+  <input type="number" class="form-control" value="1" min="1" [(ngModel)]="localValues[0]">
 </div>
 
 <div class="form-group m-2" *ngIf="!hideElementDaySelector">
-  <select class="form-control">
+  <select class="form-control" [(ngModel)]="valueUnit">
     <option *ngFor="let timeVar of timePeriodVars" value="{{timeVar}}">{{timeVar}}</option>
   </select>
 </div>
 
 <div class="form-group m-2" *ngIf="!hideWasExactlyDaySelector">
-  <input type="number" class="form-control" value="1" min="1">
+  <input type="number" class="form-control" value="1" min="1" [(ngModel)]="localValues[0]">
 </div>
 
 <div class="form-group m-2" *ngIf="!hideWasExactlyDaySelector">
@@ -47,7 +47,7 @@
 </div>
 
 <div class="form-group m-2" *ngIf="!hideWillBeExactlyDaySelector">
-  <input type="number" class="form-control" value="1" min="1">
+  <input type="number" class="form-control" value="1" min="1" [(ngModel)]="localValues[0]">
 </div>
 
 <div class="form-group m-2" *ngIf="!hideWillBeExactlyDaySelector">
