--- a/frontend/src/app/segment-category/did-events/did-events.component.html
+++ b/frontend/src/app/segment-category/did-events/did-events.component.html
@@ -1,8 +1,8 @@
 <div class="form-group d-inline-flex mt-3" *ngIf="!didNotEvent && components.length">
     <div class="mr-2">
-      <select class="form-control" id="andOr">
-        <option>All (AND)</option>
-        <option>Any (OR)</option>
+      <select class="form-control" id="andOr" [(ngModel)]="didEvents.joinCondition.conditionType">
+        <option value="AllOf">All (AND)</option>
+        <option value="AnyOf">Any (OR)</option>
       </select>
     </div>
     <div class="mt-2">
