--- a/frontend/src/app/segment-category/string-comparator/string-comparator.component.html
+++ b/frontend/src/app/segment-category/string-comparator/string-comparator.component.html
@@ -8,6 +8,6 @@
     </select>
   </div>
   <div class="form-group m-2" *ngIf="fieldRequired">
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" [(ngModel)]="localValues[0]">
   </div>
 </div>
