--- a/frontend/src/app/campaigns/setup-campaign/date-time/date-time.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/date-time/date-time.component.html
@@ -20,7 +20,9 @@
            min="1"
            max="12"
            name="hours"
-           [(ngModel)]="campaignTime.hours">&#58;
+           [(ngModel)]="campaignTime.hours"
+           #hours="ngModel"
+           [ngClass]="{'red-border-class':hours.errors && hours.touched}">&#58;
     <input type="number"
            class="form-control col-3 mx-2"
            min="0"
