--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -20,20 +20,31 @@
           <label class="card-title h5">Who do you want to send this campaign to?</label>
           <select class="form-control"
                   name="segmentName"
-                  [(ngModel)]="segment"
+                  #segmentID
+                  (change)="saveSegmentID(segmentID.value)"
                   required>
-            <option value="" selected>Please Select a Segment</option>
-            <option *ngFor="let segmentName of segmentsList"
-                    [value]="segmentName">{{segmentName}}
+            <option value="" selected>Choose from a list of Segments . . .</option>
+            <option *ngFor="let segment of segmentsList"
+                    [value]="segment.id">{{segment.name}}
+            </option>
+          </select>
+        </div>
+        <div class="form-group col-9">
+          <label class="card-title h5">What do you want to Send?</label>
+          <select class="form-control"
+                  #templateID
+                  (change)="saveTemplateID(templateID.value)">
+            <option value="" selected>Choose from a list of Templates . . .</option>
+            <option *ngFor="let smsTemplate of smsTemplatesList"
+                    [value]="smsTemplate.id">{{smsTemplate.name}}
             </option>
           </select>
         </div>
         <button class="btn btn-primary ml-3 px-4"
                 (click)="continueToSchedule()"
                 type="button"
-        >Continue
+                [disabled]="f.invalid">Continue
         </button>
-        <!--[disabled]="f.invalid"-->
       </form>
     </div>
   </div>
@@ -164,6 +175,7 @@
               After
               <input type="number"
                      name="occurences"
+                     min="1"
                      class="form-control col-1"
                      [(ngModel)]="schedule.scheduleEnd.occurrences">
               occurences
