--- a/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
+++ b/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
@@ -13,19 +13,19 @@
     </optgroup>
   </select>
 </div>
-<div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDatepicker">
-  <span class="input-group-btn">
+<div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDatepicker" style="position: relative;">
+  <span class="input-group-btn datepicker">
     <input type="text" class="form-control" name="daterange" daterangepicker [options]="singlePicker"
            (selected)="singleSelect($event)"/>
   </span>
-  <span class="ml-1" style="height: 2rem;width: 2rem; font-size: 1.8rem; opacity: 0.2; position: relative; right: 2.2rem;"><i class="far fa-calendar-alt"></i></span>
+  <span class="ml-1 calendar-icon"><i class="far fa-calendar-alt"></i></span>
 </div>
-<div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDaterangepicker">
-  <span class="input-group-btn">
+<div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDaterangepicker" style="position: relative;">
+  <span class="input-group-btn datepicker">
     <input type="text" class="form-control" name="daterange" daterangepicker [options]="multiPicker"
            (selected)="selectedDate($event, daterange)"/>
   </span>
-  <span class="ml-1" style="height: 2rem;width: 2rem; font-size: 1.8rem; opacity: 0.2; position: relative; right: 2.2rem;"><i class="far fa-calendar-alt"></i></span>
+  <span class="ml-1 calendar-icon"><i class="far fa-calendar-alt"></i></span>
 </div>
 
 <div class="form-group m-2" *ngIf="!hideElementDaySelector">
@@ -43,7 +43,7 @@
 </div>
 
 <div class="form-group m-2" *ngIf="!hideWasExactlyDaySelector">
-  days ago
+  <span class="mt-1 d-inline-block">days ago</span>
 </div>
 
 <div class="form-group m-2" *ngIf="!hideWillBeExactlyDaySelector">
