--- a/frontend/src/app/campaigns/campaigns-list/campaigns-list.component.html
+++ b/frontend/src/app/campaigns/campaigns-list/campaigns-list.component.html
@@ -11,8 +11,8 @@
         New Campaign
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" [routerLink]="['setup']" [routerLinkActive]="['active']"><i class="fas fa-mobile-alt "></i>  SMS</a>
-        <a class="dropdown-item" href="#"><i class="far fa-envelope"></i>  Email</a>
+        <a class="dropdown-item" [routerLink]="['sms']" [routerLinkActive]="['active']"><i class="fas fa-mobile-alt "></i>  SMS</a>
+        <a class="dropdown-item" [routerLink]="['email']" [routerLinkActive]="['active']"><i class="far fa-envelope"></i>  Email</a>
         <a class="dropdown-item" href="#"><i class="fal fa-mobile"></i>  Mobile Push</a>
         <a class="dropdown-item" href="#"><i class="fab fa-chrome"></i>  Web Push</a>
       </div>
