--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -21,9 +21,8 @@
           <select class="form-control"
                   name="segmentName"
                   #segmentID
-                  (change)="saveSegmentID(segmentID.value)"
-                  required>
-            <option value="" selected>Choose from a list of Segments . . .</option>
+                  (change)="saveSegmentID(segmentID.value)">
+            <option value="selectSegment" selected>Choose from a list of Segments . . .</option>
             <option *ngFor="let segment of segmentsList"
                     [value]="segment.id">{{segment.name}}
             </option>
@@ -34,7 +33,7 @@
           <select class="form-control"
                   #templateID
                   (change)="saveTemplateID(templateID.value)">
-            <option value="" selected>Choose from a list of Templates . . .</option>
+            <option value="selectTemplate" selected>Choose from a list of Templates . . .</option>
             <option *ngFor="let smsTemplate of smsTemplatesList"
                     [value]="smsTemplate.id">{{smsTemplate.name}}
             </option>
@@ -43,7 +42,9 @@
         <button class="btn btn-primary ml-3 px-4"
                 (click)="continueToSchedule()"
                 type="button"
-                [disabled]="f.invalid">Continue
+                >
+          <!--[disabled]='f.invalid || templateID.value=="selectTemplate" || segmentID.value=="selectSegment"'-->
+          Continue
         </button>
       </form>
     </div>
