--- a/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
+++ b/frontend/src/app/segment-category/date-comparator/date-comparator.component.html
@@ -15,7 +15,10 @@
 </div>
 <div class="form-group m-2 d-inline-flex" *ngIf="!hideElementDatepicker" style="position: relative;">
   <span class="input-group-btn datepicker">
-    <input type="text" class="form-control" name="daterange" daterangepicker [options]="singlePicker"
+    <input type="text" class="form-control"
+           name="daterange"
+           daterangepicker
+           [options]="singlePicker"
            (selected)="singleSelect($event)"/>
   </span>
   <span class="ml-1 calendar-icon"><i class="far fa-calendar-alt"></i></span>
