--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -52,8 +52,7 @@
         <button class="btn btn-primary ml-3 px-4"
                 (click)="continueToSchedule()"
                 type="button"
-                >
-          <!--[disabled]='f.invalid || templateID.value=="selectTemplate" || segmentID.value=="selectSegment"'-->
+                [disabled]='f.invalid || templateID.value=="selectTemplate" || segmentID.value=="selectSegment"'>
           Continue
         </button>
       </form>
