--- a/frontend/src/app/segment-category/did-events/did-event/filter/filter.component.html
+++ b/frontend/src/app/segment-category/did-events/did-event/filter/filter.component.html
@@ -20,20 +20,46 @@
   <!--<div class="form-group col-1 ml-3 px-0" *ngIf="eventProperty" [hidden]="hideInputNumber">-->
     <!--<input type="number" class="form-control col-12" value="1" min="1">-->
   <!--</div>-->
-  <div *ngIf="selectedProperty && selectedProperty.dataType=='timerange'">
-    <div class="mx-3 mt-1">
-      <label>
-        From :
-        <input [owlDateTimeTrigger]="dt4" [owlDateTime]="dt4">
-        <owl-date-time [pickerType]="'timer'" #dt4></owl-date-time>
-      </label>
+  <div *ngIf="selectedProperty && selectedProperty.dataType=='timerange'" class="d-flex flex-row flex-md-wrap">
+    <div class="mx-2 d-inline-flex">
+      <label class="pr-2">From :</label>
+      <div class="mr-1 ">
+        <input type="number"
+               class="form-control mr-3"
+               min="1"
+               max="12"
+               name="hours"
+        >
+        <span>&#58;</span>
+      </div>
+      <div class="ml-1">
+        <input type="number"
+               class="form-control ml-2 "
+               min="0"
+               max="55"
+               step="5"
+               name="minutes">
+      </div>
     </div>
-    <div class="mx-3 mt-1">
-      <label>
-        To:
-        <input [owlDateTimeTrigger]="dt1" [owlDateTime]="dt1">
-        <owl-date-time [pickerType]="'timer'" #dt1></owl-date-time>
-      </label>
+    <div class="mx-2 d-inline-flex">
+      <label class="pr-2">To :</label>
+      <div class="mr-1 ">
+        <input type="number"
+               class="form-control mr-3"
+               min="1"
+               max="12"
+               name="hours"
+        >
+        <span>&#58;</span>
+      </div>
+      <div class="ml-1">
+        <input type="number"
+               class="form-control ml-2"
+               min="0"
+               max="55"
+               step="5"
+               name="minutes">
+      </div>
     </div>
   </div>
   <div class="form-group" *ngIf="selectedProperty && selectedProperty.dataType==='select'">
