--- a/frontend/src/app/segment-category/find-users/users-by-behaviour/users-by-behaviour.component.html
+++ b/frontend/src/app/segment-category/find-users/users-by-behaviour/users-by-behaviour.component.html
@@ -33,4 +33,5 @@
     </div>
     <button class="btn btn-primary mt-2" (click)="find()">Find</button>
   </div>
+  <!--<app-segment-nlp *ngIf="showSegmentInNl" [segment]="segment"></app-segment-nlp>-->
 </div>
