--- a/frontend/src/app/segment-category/segments/create-new-segment/create-new-segment.component.html
+++ b/frontend/src/app/segment-category/segments/create-new-segment/create-new-segment.component.html
@@ -3,6 +3,33 @@
   <div class="row d-flex flex-wrap flex-row">
     <div class="col-lg-8 mt-2">
       <app-users-by-behaviour [(segment)]="newSegment"></app-users-by-behaviour>
+      <button class="btn btn-primary mt-2" data-toggle="modal" data-target="#segmentNameModal">Save</button>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal fade" id="segmentNameModal" tabindex="-1" role="dialog" aria-labelledby="segmentNameModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="segmentNameModalLabel">Save Segment as</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="segmentName">Segment Name</label>
+              <input type="text" class="form-control" id="segmentName" aria-describedby="segmentNameHelp" placeholder="Enter Segment Name" name="segmentName" [(ngModel)]="newSegment.name">
+              <small id="segmentNameHelp" class="form-text text-muted">We'll use this name to identify segments.</small>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#segmentNameModal" (click)="save()">Save Segment</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
